@@ -18,8 +18,6 @@ Recent Bugs
 * mirror command rejects brep solids and turns faces inside-out when
   mirroring a comb with brep solids below it.
 
-* rt -t (render from top to bottom) is broken
-
 * rtsil command works if do what usage says and redirect output to
   file, but mentions .pix when data is actually .bw; and using the -o
   option results in a black image.  it is also inconsistent, writing a
